# compass-political-nlp

./: .gitignore  AGENT_DELIVERY_REPORT.md  LICENSE  README.md  pyproject.toml  requirements-chat.txt  requirements-demo.txt  requirements-full.txt  requirements-onyxia.txt  requirements-test.txt  requirements.txt
apps/: chat_gradio.py  chat_web.py
docs/: 01_project_overview.md  02_methodology.md  03_taxonomy.md  04_literature_review.md  05_architecture.md  06_roadmap.md  07_system_assembly.md  08_component_choices.md  09_onyxia_runbook.md  11_onyxia_hf_models.md  12_manifesto_pdf_ingestion.md  13_chat_interface.md  14_rag_expert_onyxia.md
evaluation/: rag_reference_questions.json
examples/: manifesto_pdf_manifest_sample.csv  run_demo.py  run_manifesto_pdf_ingestion.py  run_real_architecture.py  sample_manifesto.txt  sample_party_profile.json
notebooks/: 01_compass_demo.ipynb
registry/: v2paallian.yaml  v2paanteli.yaml  v2paclient.yaml  v2pagroup.yaml  v2palocoff.yaml  v2papeople.yaml  v2paplur.yaml  v2pavote.yaml  v2xpa_popul.yaml
scripts/: build_manifesto_manifest.py  build_political_graph.py  build_v2paplur_adherence_report.py  download_onyxia_models.py  evaluate_chat_rag.py
tests/: conftest.py  test_chat_engine.py  test_chat_web.py  test_config_local.py  test_demo_pipeline.py  test_evaluate_chat_rag.py  test_expert_retrieval.py  test_gaps_integration.py  test_internal_retrieval_hyde.py  test_llm_client.py  test_manifesto_api.py  test_manifesto_manifest_builder.py  test_nlp_models.py  test_query_analysis.py  test_reasoning_engine_safety.py  (+3 more)
(+44 files in other folders)
