[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compass-political-nlp"
version = "0.1.0"
description = "Traceable political NLP pipeline for manifesto and party-profile analysis."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["pydantic>=2.5", "pydantic-settings>=2.1", "PyYAML>=6.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
# Baseline correctness checks; style expansion can be introduced separately.
select = ["E9", "F63", "F7", "F82"]
